@@ -1,3 +1,8 @@
+2002-07-05  Derek Atkins  <derek@ihtf.com>
+
+	* gw-engine-spec.scm: wrap gnc_lot_get_split_list
+	* gw-business-core-spec.scm: wrap gncInvoiceGetPosted{Acc,Txn,Lot}
+
 2002-07-04  Derek Atkins  <derek@ihtfp.com>
 
 	* option-util.c: add gnc_option_get_option_data() function
